# LTE01R02A04_C_SDK_G

./: CMakeLists.txt  Kconfig  build_all.bat  build_all.sh  build_check.py
cmake/: auto_revision.c.in  dummy.c  extension.cmake  incbin.S.in  incbin_size.S.in  toolchain-gcc.cmake
components/: CMakeLists.txt
components/apploader/: CMakeLists.txt
components/appstart/: CMakeLists.txt  Kconfig
components/atr/: CMakeLists.txt  Kconfig  core.cmake
components/ats/: CMakeLists.txt  Kconfig  core.cmake
components/audio/: CMakeLists.txt  Kconfig  core.cmake
components/audio/include/: audio_config.h.in  audio_decoder.h  audio_device.h  audio_encoder.h  audio_ktdetect.h  audio_player.h  audio_reader.h  audio_resample.h  audio_tonegen.h  audio_types.h  audio_writer.h  sbc.h
components/audio/src/: audio_decoder.c  audio_encoder.c
components/audio/src/8850/amrcodec/: vsi_amr_nb.h  vsi_amr_wb.h
components/audio/src/8850/cpheaders/: hal_speech.h  hal_volte.h
components/audio/src/8850/driverheaders/: 8ktest_stereo.h  aud_m.h  aud_snd_types.h  audio_driver.h  hal_aif.h  hal_error.h  lscalldump_8kmono.h  snd_types.h
components/aworker/: CMakeLists.txt  core.cmake
components/bootloader/: CMakeLists.txt  Kconfig
components/calclib/: CMakeLists.txt  core.cmake  core_crc.cmake
components/cfw/: CMakeLists.txt  Kconfig  core.cmake
components/chip/: Kconfig  chip.cmake  chip_8850.cmake
components/crypto/: CMakeLists.txt  core.cmake
components/diag/: CMakeLists.txt  Kconfig  core.cmake
components/driver/: CMakeLists.txt  Kconfig  core.cmake
components/firmwareupdate/: CMakeLists.txt  Kconfig  core.cmake
components/fs/: CMakeLists.txt  Kconfig  core.cmake
components/gnss/: CMakeLists.txt  Kconfig  libgnssmgt.cmake
components/hal/: CMakeLists.txt  Kconfig  core.cmake
components/kernel/: CMakeLists.txt  Kconfig  core.cmake  core_osi_lib.cmake
components/lcdpanel/: CMakeLists.txt  core.cmake
components/modem_lte/: CMakeLists.txt  Kconfig
components/modem_lte/include/: cmn_defs_8850.h  common_syn.h  cs_types.h  itf_api.h  itf_msgc.h  itf_sim.h  modem_lte_config.h.in  modem_lte_init.h  tgl.hec  tgl.het  ut_common.h
components/modem_lte/src/: modem_lte_init.c
components/net/http2/: CMakeLists.txt  Kconfig  core.cmake  symrename
components/net/http2/common/inc/: cfl_aescbc.h  cfl_base64.h  cfl_string.h  cfl_time.h  cfl_timer.h  dl_malloc.h
components/net/http2/common/inc/mem_debug/: cfl_mem_debug.h
components/net/http2/common/src/: daps_start.c
components/net/http2/common/src/dl_malloc/: dl_malloc.c  dlmalloc_api.c
components/net/http2/common/src/encrypt/: cfl_aescbc.c  cfl_base64.c  cfl_md5.c
components/net/http2/common/src/list/: cfl_list.c  cfl_list_unit_test.c
components/net/http2/common/src/mem/: cfl_mem.c
components/net/http2/common/src/mem_debug/: cfl_mem_debug.c
components/net/http2/common/src/mime_type/: mime_type.c
components/net/http2/common/src/string/: cfl_char.c  cfl_string.c  cfl_wchar.c
components/net/http2/common/src/time/: cfl_time.c
components/net/http2/common/src/timer/: cfl_timer.c
components/net/http2/hsm/inc/: Qf.h  Qtimer.h  hsm_api.h
components/net/http2/hsm/src/: Cplus.c  Qf.c  Qhsm.c  QhsmTran.c
components/net/http2/include/: cfl_char.h  cfl_dlmalloc.h  cfl_list.h  cfl_md5.h  cfl_mem.h  cfl_wchar.h  http_api.h  js_cookie_api.h
components/ql-application/audio/: CMakeLists.txt  audio_demo.c
components/ql-application/audio/inc/: audio_demo.h
components/ql-application/audio/pwm_audio/: pwm_audio_demo.c
components/ql-application/audio/pwm_audio/inc/: pwm_audio_demo.h
components/ql-application/ethernet/: CMakeLists.txt  ethernet_ap_demo.c  ethernet_demo.c  ethernet_http_demo.c  ethernet_router_demo.c
components/ql-application/ethernet/ch395/: ch395.c
components/ql-application/ethernet/ch395/driver/: CH395CMD.c
components/ql-application/ethernet/ch395/driver/include/: CH395.H  CH395CMD.H  CH395INC.H
components/ql-application/ethernet/ch395/inc/: ch395_adapter.h
components/ql-application/ethernet/inc/: ethernet_demo.h  ethernet_demo_macro.cmake  ethernet_demo_macro.h.in
components/ql-application/gnss/: CMakeLists.txt  gnss_demo.c  hd_gnss_demo.c
components/ql-application/gnss/inc/: hd_gnss_demo.h
components/ql-application/libwebsockets/: CMakeLists.txt  websocket_demo.c
components/ql-application/libwebsockets/inc/: websocket_demo.h
components/ql-application/lwm2m/: CMakeLists.txt  lwm2m_client_demo.c
components/ql-application/lwm2m/inc/: lwm2m_client_demo.h
components/ql-application/wifi/: CMakeLists.txt  wifi_ap_demo.c  wifi_demo.c
components/ql-application/wifi/fc41d/inc/: ql_wifi_app.h  ql_wifi_msg.h  ql_wifi_net.h  ql_wifi_spi.h  ql_wifi_uart.h
components/ql-application/wifi/fc41d/src/: ql_wifi_app.c  ql_wifi_msg.c  ql_wifi_net.c  ql_wifi_spi.c  ql_wifi_uart.c
components/ql-application/wifi/fcm360w/inc/: ql_wifi_app.h  ql_wifi_msg.h  ql_wifi_net.h
components/ql-application/wifi/fcm360w/src/: ql_wifi_app.c  ql_wifi_msg.c  ql_wifi_net.c
components/ql-application/wifi/fcm360w/src/drv_espiwifi/: ql_wifi_adapter.c  ql_wifi_adapter.h
components/ql-application/wifi/fcm360w/src/drv_espiwifi/driver/: drv_espi.c  drvspi_platform.c
components/ql-application/wifi/fcm360w/src/drv_espiwifi/driver/include/: drv_espi.h  drvspi_platform.h
components/ql-application/wifi/fcm360w/src/drv_espiwifi/platform/: platform_mutex.c  platform_os.c  platform_queue.c  platform_sem.c  platform_thread.c
components/ql-application/wifi/fcm360w/src/drv_espiwifi/platform/include/: platform_mutex.h  platform_os.h  platform_queue.h  platform_sem.h  platform_thread.h
components/ql-application/wifi/inc/: wifi_demo.h  wifi_demo_macro.cmake  wifi_demo_macro.h.in
tools/: SimlockInsKey.py  build_all_target.sh  cmakeconfig.py  cmakedep.py  codesize.py  crc32.py  deliverpack.py  fullconfig.py  groupgen.py  iomuxgen.py  kconfiglib.py  keypadgen.py  launch.bat  launch.sh  libs2one.py  menuconfig.bat  minconfig.py  modemgen.py  norpropgen.py  pacgen.py  partinfogen.py  setcopyright.py  symdefgen.py
(+2068 files in other folders)
